--- a/spVINS_FUSION/config/euroc/euroc_stereo_config.yaml
+++ b/spVINS_FUSION/config/euroc/euroc_stereo_config.yaml
@@ -39,7 +39,7 @@ body_T_cam1: !!opencv-matrix
           0, 0, 0, 1]
 
 #Multiple thread support
-multiple_thread: 0
+multiple_thread: 1
 
 #feature traker paprameters
 max_cnt: 150            # max feature number in feature tracking
@@ -54,8 +54,16 @@ max_solver_time: 0.04  # max solver itration time (ms), to guarantee real time
 max_num_iterations: 8   # max solver itrations, to guarantee real time
 keyframe_parallax: 10.0 # keyframe selection threshold (pixel)
 
+#loop closure parameters
+load_previous_pose_graph: 0        # load and reuse previous pose graph; load from 'pose_graph_save_path'
+pose_graph_save_path: "~/output/pose_graph/" # save and load path
+save_image: 1                   # save image in pose graph for visualization prupose; you can close this function by setting 0 
+
 #for superpoint
-use_superpoint: 1  #1 for true
-sp_path: "/home/yutong/sp_c/weights/superpoint.pt"
+use_superpoint: 0  #1 for true
+sp_path: "/home/yutong/spVINS_ws/src/VINS-Fusion/support_files/weights/superpoint.pt"
+spglue_path: "/home/yutong/spVINS_ws/src/VINS-Fusion/support_files/weights/superglue_indoor_cuda.pt"
 sp_thres: 0.1
 sp_nms_dist: 15
+sp_nms_dist_loop: 10
+sp_thres_loop: 0.005 #usually smaller than sp_thres
