--- a/spVINS_FUSION/vins_estimator/package.xml
+++ b/spVINS_FUSION/vins_estimator/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package>
-  <name>vins</name>
+  <name>vins_estimator</name>
   <version>0.0.0</version>
   <description>The vins package</description>
 
@@ -41,10 +41,12 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>std_msgs</build_depend>
   <build_depend>image_transport</build_depend>
   <build_depend>camera_models</build_depend>
 
   <run_depend>roscpp</run_depend>
+  <run_depend>std_msgs</run_depend>
   <run_depend>image_transport</run_depend>
   <run_depend>camera_models</run_depend>
 
